--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
 mysql-connector-python = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
